--- a/TheGame/Base.lproj/LaunchScreen.storyboard
+++ b/TheGame/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -13,38 +13,36 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice_1024" translatesAutoresizingMaskIntoConstraints="NO" id="J6C-Za-cXH">
-                                <rect key="frame" x="20" y="261" width="374" height="374"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="J6C-Za-cXH" secondAttribute="height" id="Qtx-1a-j8u"/>
-                                </constraints>
+                                <rect key="frame" x="20" y="144" width="335" height="379"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The GAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcC-1u-jNT">
-                                <rect key="frame" x="66.5" y="193.5" width="281.5" height="61"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcC-1u-jNT">
+                                <rect key="frame" x="19.5" y="111.5" width="336" height="61"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="48"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by VMWISHES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Auq-m3-OWq">
-                                <rect key="frame" x="143.5" y="660.5" width="127" height="23"/>
+                                <rect key="frame" x="124" y="513.5" width="127" height="23"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="18"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="7u3-5G-1KE"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="JZ9-Oj-v8L"/>
-                            <constraint firstItem="Auq-m3-OWq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="1.5" id="XaP-Cn-kpM"/>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="aNN-nh-HLG"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.5" id="cHQ-TX-Jxv"/>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gpV-qb-2Lr"/>
-                            <constraint firstItem="Auq-m3-OWq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="iKH-nU-umJ"/>
-                            <constraint firstAttribute="trailing" secondItem="J6C-Za-cXH" secondAttribute="trailing" constant="20" id="o1X-5e-A4v"/>
+                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="6DJ-sL-e1S"/>
+                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerX" secondItem="Auq-m3-OWq" secondAttribute="centerX" id="97A-hG-6SK"/>
+                            <constraint firstItem="BcC-1u-jNT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="19.5" id="FlT-4C-RVY"/>
+                            <constraint firstItem="J6C-Za-cXH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fb8-et-Yed"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Auq-m3-OWq" secondAttribute="bottom" constant="130.5" id="hCs-Ez-RGR"/>
+                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerX" secondItem="J6C-Za-cXH" secondAttribute="centerX" id="kXC-A2-r51"/>
+                            <constraint firstItem="BcC-1u-jNT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="111.5" id="md9-QN-abg"/>
+                            <constraint firstItem="J6C-Za-cXH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="144" id="rfX-fE-Mc5"/>
+                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="udt-4r-UdE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
