--- a/TheGame/Base.lproj/LaunchScreen.storyboard
+++ b/TheGame/Base.lproj/LaunchScreen.storyboard
@@ -12,21 +12,24 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="Kon-V6-cQq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice_1024" translatesAutoresizingMaskIntoConstraints="NO" id="J6C-Za-cXH">
-                                <rect key="frame" x="20" y="144" width="335" height="379"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="dice_1024" translatesAutoresizingMaskIntoConstraints="NO" id="fmd-UM-eBj">
+                                <rect key="frame" x="15" y="199" width="345" height="269"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="fmd-UM-eBj" secondAttribute="height" multiplier="857:667" id="oMl-kM-YAY"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcC-1u-jNT">
-                                <rect key="frame" x="19.5" y="111.5" width="336" height="61"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nQ-0l-pVN">
+                                <rect key="frame" x="0.0" y="88" width="375" height="61"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="48"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by VMWISHES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Auq-m3-OWq">
-                                <rect key="frame" x="124" y="513.5" width="127" height="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by VMWISHES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Bc-WR-aFZ">
+                                <rect key="frame" x="15" y="593" width="345" height="23"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="18"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -34,17 +37,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="6DJ-sL-e1S"/>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="centerX" secondItem="Auq-m3-OWq" secondAttribute="centerX" id="97A-hG-6SK"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="19.5" id="FlT-4C-RVY"/>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fb8-et-Yed"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Auq-m3-OWq" secondAttribute="bottom" constant="130.5" id="hCs-Ez-RGR"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerX" secondItem="J6C-Za-cXH" secondAttribute="centerX" id="kXC-A2-r51"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="111.5" id="md9-QN-abg"/>
-                            <constraint firstItem="J6C-Za-cXH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="144" id="rfX-fE-Mc5"/>
-                            <constraint firstItem="BcC-1u-jNT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="udt-4r-UdE"/>
+                            <constraint firstItem="fmd-UM-eBj" firstAttribute="width" relation="lessThanOrEqual" secondItem="cpC-IK-e3s" secondAttribute="width" constant="-30" id="FV1-Ra-K7x"/>
+                            <constraint firstItem="fmd-UM-eBj" firstAttribute="centerY" secondItem="cpC-IK-e3s" secondAttribute="centerY" id="ISX-93-UHy"/>
+                            <constraint firstItem="9Bc-WR-aFZ" firstAttribute="width" secondItem="fmd-UM-eBj" secondAttribute="width" id="Jii-4L-udf"/>
+                            <constraint firstItem="cpC-IK-e3s" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="9Bc-WR-aFZ" secondAttribute="bottom" constant="10" id="RyN-8t-NFh"/>
+                            <constraint firstItem="fmd-UM-eBj" firstAttribute="centerX" secondItem="cpC-IK-e3s" secondAttribute="centerX" id="Yyp-Vi-EOa"/>
+                            <constraint firstItem="8nQ-0l-pVN" firstAttribute="width" secondItem="cpC-IK-e3s" secondAttribute="width" id="Zox-Au-1fC"/>
+                            <constraint firstItem="9Bc-WR-aFZ" firstAttribute="centerX" secondItem="fmd-UM-eBj" secondAttribute="centerX" id="cxM-Ok-vjL"/>
+                            <constraint firstItem="8nQ-0l-pVN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cpC-IK-e3s" secondAttribute="top" constant="10" id="dTX-gV-k1O"/>
+                            <constraint firstItem="9Bc-WR-aFZ" firstAttribute="top" secondItem="fmd-UM-eBj" secondAttribute="bottom" constant="125" id="eeQ-fQ-Vu5"/>
+                            <constraint firstItem="fmd-UM-eBj" firstAttribute="top" secondItem="8nQ-0l-pVN" secondAttribute="bottom" constant="50" id="fNr-QF-75F"/>
+                            <constraint firstItem="8nQ-0l-pVN" firstAttribute="centerX" secondItem="fmd-UM-eBj" secondAttribute="centerX" id="ndQ-7i-gsS"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="cpC-IK-e3s"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -53,6 +58,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dice_1024" width="1024" height="1024"/>
+        <image name="dice_1024" width="818" height="667"/>
     </resources>
 </document>
