--- a/TheGame/Base.lproj/Main.storyboard
+++ b/TheGame/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ISV-GM-3yy">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -9,20 +9,78 @@
     </dependencies>
     <scenes>
         <!--Splash View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="nlu-cj-Dkm">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SplashViewController" customModule="TheGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController storyboardIdentifier="splashScreen" id="ISV-GM-3yy" customClass="SplashViewController" customModule="TheGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JSk-wM-pcr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <color key="tintColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="dice_1024" translatesAutoresizingMaskIntoConstraints="NO" id="MVX-JY-YYI">
+                                <rect key="frame" x="15" y="199" width="345" height="269"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="height" multiplier="857:667" id="h5v-4f-ixu"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y7b-Yw-bNL">
+                                <rect key="frame" x="0.0" y="88" width="375" height="61"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="48"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by VMWISHES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzj-PC-972">
+                                <rect key="frame" x="15" y="593" width="345" height="23"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="18"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Center connection required." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="quK-Ek-tee">
+                                <rect key="frame" x="15" y="498" width="345" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lrn-c9-5yj">
+                                <rect key="frame" x="15" y="524.5" width="345" height="30"/>
+                                <state key="normal" title="Log in through Settings"/>
+                                <connections>
+                                    <action selector="gotoSettings:" destination="ISV-GM-3yy" eventType="touchUpInside" id="Spz-eM-ASf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="quK-Ek-tee" firstAttribute="top" secondItem="MVX-JY-YYI" secondAttribute="bottom" constant="30" id="1xk-y0-Lz6"/>
+                            <constraint firstItem="Lrn-c9-5yj" firstAttribute="centerX" secondItem="xlx-9M-mEJ" secondAttribute="centerX" id="ETY-L2-MB3"/>
+                            <constraint firstItem="MVX-JY-YYI" firstAttribute="centerY" secondItem="xlx-9M-mEJ" secondAttribute="centerY" id="Ebx-A9-9Pu"/>
+                            <constraint firstItem="Y7b-Yw-bNL" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="GnF-3C-ssB"/>
+                            <constraint firstItem="xlx-9M-mEJ" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qzj-PC-972" secondAttribute="bottom" constant="10" id="I2T-h8-WWE"/>
+                            <constraint firstItem="quK-Ek-tee" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="JCO-VK-yNK"/>
+                            <constraint firstItem="MVX-JY-YYI" firstAttribute="width" relation="lessThanOrEqual" secondItem="xlx-9M-mEJ" secondAttribute="width" constant="-30" id="Nde-Gc-rqa"/>
+                            <constraint firstItem="Y7b-Yw-bNL" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xlx-9M-mEJ" secondAttribute="top" constant="10" id="Oyv-bO-D26"/>
+                            <constraint firstItem="MVX-JY-YYI" firstAttribute="centerX" secondItem="xlx-9M-mEJ" secondAttribute="centerX" id="VGd-3D-A6e"/>
+                            <constraint firstItem="qzj-PC-972" firstAttribute="top" secondItem="MVX-JY-YYI" secondAttribute="bottom" constant="125" id="Ys3-71-74h"/>
+                            <constraint firstItem="Lrn-c9-5yj" firstAttribute="top" secondItem="quK-Ek-tee" secondAttribute="bottom" constant="6" id="beQ-nj-eBH"/>
+                            <constraint firstItem="quK-Ek-tee" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="bfn-Nb-Ez2"/>
+                            <constraint firstItem="qzj-PC-972" firstAttribute="centerX" secondItem="MVX-JY-YYI" secondAttribute="centerX" id="mg0-Mk-80L"/>
+                            <constraint firstItem="MVX-JY-YYI" firstAttribute="top" secondItem="Y7b-Yw-bNL" secondAttribute="bottom" constant="50" id="tNg-pz-WcG"/>
+                            <constraint firstItem="Y7b-Yw-bNL" firstAttribute="width" secondItem="xlx-9M-mEJ" secondAttribute="width" id="tNm-hU-nVD"/>
+                            <constraint firstItem="qzj-PC-972" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="wIn-eX-9vS"/>
+                            <constraint firstItem="Lrn-c9-5yj" firstAttribute="width" secondItem="MVX-JY-YYI" secondAttribute="width" id="x5e-CF-VdV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xlx-9M-mEJ"/>
                     </view>
+                    <connections>
+                        <outlet property="connectionLabel" destination="quK-Ek-tee" id="Mhl-TR-dRT"/>
+                        <outlet property="settingsButton" destination="Lrn-c9-5yj" id="T5S-eD-MRH"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T0E-ir-Nmm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-397" y="-43"/>
+            <point key="canvasLocation" x="-1462" y="-93"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dice_1024" width="818" height="667"/>
+    </resources>
 </document>
