--- a/TheGame/Boards/GameBoard.storyboard
+++ b/TheGame/Boards/GameBoard.storyboard
@@ -10,7 +10,7 @@
         <!--ViewController-->
         <scene sceneID="RaX-aS-TBG">
             <objects>
-                <viewController storyboardIdentifier="loserBoard" id="iqr-Vb-gJQ" userLabel="ViewController" customClass="ViewController" customModule="TheGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loserBoard" id="iqr-Vb-gJQ" userLabel="ViewController" customClass="GameViewController" customModule="TheGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="86Z-RM-clE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
